[layoutng] Restore a legacy layout optimization

When we do have percentage descendants, we need to force an extra
layout when applying stretch alignment, because the flexbox height
is now definite (per https://drafts.csswg.org/css-flexbox/#algo-stretch)

LayoutNG never set the "has percentage descendants" flag, so we could
not skip this extra layout when there are none. We instead had a
different optimization that addresses the case where the height was
already definite.

This patch makes it so that NG does set the flag and makes flexbox
use this optimization in NG as well. This has the nice side effect
of fixing two tests, in addition to the performance improvement,
because we now correctly handle the case of legacy flexbox ->
legacy flexbox -> NG block -> NG percentage sized, where the
outer flexbox now knows it needs to redo layout in this case (see
crbug.com/876459 for more details)

Performance improvements according to
https://pinpoint-dot-chromeperf.appspot.com/job/15b736ee640000:
flexbox-lots-of-data          +43.9%
flexbox-with-stretch-layout  +851.2%

Bug: 875147,876459

Cq-Include-Trybots: luci.chromium.try:linux_layout_tests_layout_ng
Change-Id: I535f0c62993f4cdc03f15cdf91efe300989e43b2
Reviewed-on: https://chromium-review.googlesource.com/1190246
Commit-Queue: Christian Biesinger <cbiesinger@chromium.org>
Reviewed-by: Emil A Eklund <eae@chromium.org>
Cr-Commit-Position: refs/heads/master@{#586318}
Former-commit-id: 229c8737a637b6d9b82e6fc2748c5574a16b27f1